@@ -125,6 +125,7 @@ Version 1.5
  - Pull Request #1021 - Added Zooz ZSE08 Contact Sensor from DeviantEng (Nechry)
  - Pull Request #1023 - Add product type for ZXT-120US from daradib (Nechry)
  - Pull Request #1024 - Added new device, zooz zse09 from DeviantEng (Nechry)
+ - Add CT30 Thermostat config file (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
